--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: partner-classification
     env: python
     buildCommand: pip install -r requirements.txt && python -m playwright install
+    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
